--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@300;400;700;800&display=swap");
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
@@ -21,4 +21,5 @@ a {
 
 * {
   box-sizing: border-box;
+  font-family: "Jost";
 }
